updated pictures and colours